--- a/RealEstate_FAB5/src/main/resources/templates/layout_user/aside.html
+++ b/RealEstate_FAB5/src/main/resources/templates/layout_user/aside.html
@@ -24,9 +24,9 @@
                         <p class="card-title mt-2 d-flex justify-content-center" style="font-size: 13px;">
                             Số dư TK: {{$pay.pay_money | currency:'':0}} VNĐ
                         </p>
-                        <p class="card-title mt-2 d-flex justify-content-center" style="font-size: 13px;">
+                        <!-- <p class="card-title mt-2 d-flex justify-content-center" style="font-size: 13px;">
                             TK khuyến mãi: 0 VNĐ
-                        </p>
+                        </p> -->
                         <a type="button" class="btn btn-primary w-100" href="/home/manager/pay"><i class="fa-solid fa-wallet" style="margin-right: 5px;"></i> Nạp tiền</a>
                     </div>
                 </div>
