--- a/RealEstate_FAB5/src/main/resources/templates/account/changePassword.html
+++ b/RealEstate_FAB5/src/main/resources/templates/account/changePassword.html
@@ -2,98 +2,94 @@
 <html lang="en">
 
 <head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Real Estate Fpoly</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Real Estate Fpoly</title>
 
-<!-- Favicon -->
-<link rel="shortcut icon" href="/img/Real_Estate.png"
-	type="image/x-icon">
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/img/Real_Estate.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 
-<!-- Customized Bootstrap Stylesheet -->
-<link href="/css/bootstrap.min.css" rel="stylesheet">
-	<style>
-body {
-    background-image: linear-gradient(to bottom left, #ffa626, #fff);
-    height: 100vh;
-    overflow: hidden;
-}
-
-.box {
-    margin-top: -40px;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.input-field {
-    width: 100%;
-    margin: 35px 0;
-    height: 55px;
-    border-radius: 7px;
-    padding: 5px;
-    position: relative;
-}
-
-.btn {
-    margin-top: 10px;
-}
-
-.item3 {
-    font-size: 12px;
-    font-style: italic;
-    display: flex;
-    justify-content: flex-end;
-    margin-left: 5px;
-    color: red;
-}
-
-label {
-    font-size: 20px;
-}
-
-.card-footer {
-    display: flex;
-    justify-content: space-between;
-    /* Căn giữa theo chiều ngang */
-    background-color: #f0f0f0;
-    /* Màu nền của footer (tùy chọn) */
-    padding: 10px;
-    /* Khoảng cách giữa các phần tử (tùy chọn) */
-}
-
-.card-footer a {
-    text-decoration: none;
-    color: #333;
-    /* Màu chữ của các liên kết (tùy chọn) */
-    /* Không cần margin khi sử dụng space-between */
-}
-/* an hien password */
-
-#btn_passcu,
-#btn_repassmoi {
-    position: absolute;
-    top: 110%;
-    right: 10px;
-    transform: translateY(-50%);
-    cursor: pointer;
-    border: none;
-}
-
-
-/* an hien password */
-	</style>
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-image: linear-gradient(to bottom left, #ffa626, #fff);
+            height: 100vh;
+            overflow: hidden;
+        }
+        
+        .box {
+            margin-top: -40px;
+        }
+        
+        form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+        
+        .input-field {
+            width: 100%;
+            margin: 35px 0;
+            height: 55px;
+            border-radius: 7px;
+            padding: 5px;
+            position: relative;
+        }
+        
+        .btn {
+            margin-top: 10px;
+        }
+        
+        .item3 {
+            font-size: 12px;
+            font-style: italic;
+            display: flex;
+            justify-content: flex-end;
+            margin-left: 5px;
+            color: red;
+        }
+        
+        label {
+            font-size: 20px;
+        }
+        
+        .card-footer {
+            display: flex;
+            justify-content: space-between;
+            /* Căn giữa theo chiều ngang */
+            background-color: #f0f0f0;
+            /* Màu nền của footer (tùy chọn) */
+            padding: 10px;
+            /* Khoảng cách giữa các phần tử (tùy chọn) */
+        }
+        
+        .card-footer a {
+            text-decoration: none;
+            color: #333;
+            /* Màu chữ của các liên kết (tùy chọn) */
+            /* Không cần margin khi sử dụng space-between */
+        }
+        /* an hien password */
+        
+        #btn_passcu,
+        #btn_repassmoi {
+            position: absolute;
+            top: 110%;
+            right: 10px;
+            transform: translateY(-50%);
+            cursor: pointer;
+            border: none;
+        }
+        /* an hien password */
+    </style>
     <style type="text/css">
         .toast {
             position: fixed;
-            top: 650px;
+            top: 500px;
             right: 5px;
             border-radius: 12px;
             background: #fff;
@@ -189,55 +185,50 @@ label {
 </head>
 
 <body>
-	<div class="container d-flex flex-column">
-		<div
-			class="row align-items-center justify-content-center
+    <div class="container d-flex flex-column">
+        <div class="row align-items-center justify-content-center
           min-vh-100">
-			<div class="col-12 col-md-8 col-lg-4">
-				<div class="card shadow-sm">
-					<div class="card-header">
+            <div class="col-12 col-md-8 col-lg-4">
+                <div class="card shadow-sm">
+                    <div class="card-header">
                         <h3>Đổi mật khẩu</h3>
                     </div>
-					<div class="card-body">
-						<form id="doipass" action="/change-password-post" method="post">
-						<div class="box">
-							<div class="input-field">
-								<label for="email" class="form-label">Mật khẩu mới</label> <input
-									type="password" id="mkmoi" class="form-control" name="mkmoi"
-									placeholder="Nhập mật khẩu mới ..." required="">
-								<button type="button" id="btn_passcu">Hiện</button>
-								<span class="form-message item3"></span>
-							</div>
-							<div class="input-field">
-								<label for="email" class="form-label">Xác nhận mật khẩu
-									mới</label> <input type="password" id="nhaplaimkmoi"
-									class="form-control" name="nhaplaimkmoi"
-									placeholder="Nhập lại mật khẩu mới ..." required="">
-								<button type="button" id="btn_repassmoi">Hiện</button>
-								<span class="form-message item3"></span>
-							</div>
-						</div>
-							<div class="mb-3 d-grid">
-								<button type="submit" class="btn btn-primary">Xác nhận
+                    <div class="card-body">
+                        <form id="doipass" action="/change-password-post" method="post">
+                            <div class="box">
+                                <div class="input-field">
+                                    <label for="email" class="form-label">Mật khẩu mới</label> <input type="password" id="mkmoi" class="form-control" name="mkmoi" placeholder="Nhập mật khẩu mới ..." required="">
+                                    <button type="button" id="btn_passcu">Hiện</button>
+                                    <span class="form-message item3"></span>
+                                </div>
+                                <div class="input-field">
+                                    <label for="email" class="form-label">Xác nhận mật khẩu
+									mới</label> <input type="password" id="nhaplaimkmoi" class="form-control" name="nhaplaimkmoi" placeholder="Nhập lại mật khẩu mới ..." required="">
+                                    <button type="button" id="btn_repassmoi">Hiện</button>
+                                    <span class="form-message item3"></span>
+                                </div>
+                            </div>
+                            <div class="mb-3 d-grid">
+                                <button type="submit" class="btn btn-primary">Xác nhận
 								</button>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	
-	<div th:if="${visible == 'true'}">
-		<div class="toast active">
-			<div class="toast-content">
-				<div class="message">
-					<span class="text text-1" th:utext="${thongbao}"></span>
-				</div>
-			</div>
-			<div class="progress active"></div>
-		</div>
-	</div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div th:if="${visible == 'true'}">
+        <div class="toast active">
+            <div class="toast-content">
+                <div class="message">
+                    <span class="text text-1" th:utext="${thongbao}"></span>
+                </div>
+            </div>
+            <div class="progress active"></div>
+        </div>
+    </div>
 </body>
 <script src="/js/toast.js"></script>
 <script src="/js/validator.js"></script>
@@ -246,9 +237,9 @@ label {
         form: '#doipass',
         errorSelector: '.form-message',
         rules: [
-        	Validator.isRequired('#nhaplaimkmoi','Vui lòng nhập lại mật khẩu'),
+            Validator.isRequired('#nhaplaimkmoi', 'Vui lòng nhập lại mật khẩu'),
             Validator.isRequired('#mkmoi', 'Vui lòng nhập mật khẩu mới'),
-            Validator.chckPass('#mkmoi','Tổi thiểu 6 ký tự số chữ thường, hoa ký tự đặc biệt'),
+            Validator.chckPass('#mkmoi', 'Tổi thiểu 6 ký tự số chữ thường, hoa ký tự đặc biệt'),
             Validator.isConfirmed('#nhaplaimkmoi', function() {
                 return document.querySelector('#doipass #mkmoi').value;
             }, 'Nhập lại mật khẩu không khớp'),
@@ -282,4 +273,5 @@ label {
         });
     });
 </script>
+
 </html>
