--- a/RealEstate_FAB5/src/main/resources/templates/home/index.html
+++ b/RealEstate_FAB5/src/main/resources/templates/home/index.html
@@ -81,7 +81,7 @@
 
 
         <!-- Property List Start -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl py-5" id="duan">
             <div class="container">
                 <div class="row g-0 gx-5 align-items-end">
                     <div class="col-lg-6">
@@ -214,7 +214,7 @@
             <div class="container">
                 <div class="row g-0 gx-5 align-items-end">
                     <div class="col-lg-6">
-                        <div class="text-start mx-auto mb-5 wow slideInLeft" data-wow-delay="0.1s">
+                        <div class="text-start mx-auto mb-5 wow slideInLeft" data-wow-delay="0.1s" id="dexuat">
                             <h3 class="mb-3">Real Estate đề xuất</h3>
                         </div>
                     </div>
