--- a/RealEstate_FAB5/src/main/resources/templates/layout_user/footer.html
+++ b/RealEstate_FAB5/src/main/resources/templates/layout_user/footer.html
@@ -16,21 +16,13 @@
                     <h5 class="text-white mb-4">Liên lạc</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>FPT Polytechnic Cần Thơ</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+84 981 725 836</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@fpt.edu.vn</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>tungtqpc04315@fpt.edu.vn</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Đường dẫn nhanh</h5>
-                    <a class="btn btn-link text-white-50" href="">Dự án bán</a>
-                    <a class="btn btn-link text-white-50" href="">Dự án thuê</a>
-                    <a class="btn btn-link text-white-50" href="">Dự án nổi bật</a>
-                    <a class="btn btn-link text-white-50" href="">Dự án dành cho bạn</a>
-                    <a class="btn btn-link text-white-50" href="">Liên hệ</a>
+                    <a class="btn btn-link text-white-50" href="#duan">Dự án bất động sản</a>
+                    <a class="btn btn-link text-white-50" href="#dexuat">RealEstate đề xuất</a>
+                    <a class="btn btn-link text-white-50" href="/home/contact">Liên hệ</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Hình ảnh dự án</h5>
@@ -73,10 +65,8 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
-                            <a href=""><i class="fa-brands fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/ToQuocTung04" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                             <a href=""><i class="fa-brands fa-youtube"></i></a>
-                            <a href=""><i class="fa-brands fa-instagram"></i></a>
-                            <a href=""><i class="fa-brands fa-tiktok"></i></a>
                         </div>
                     </div>
                 </div>
